alteração na pagina

--- a/Pagina_central/pagina.html
+++ b/Pagina_central/pagina.html
@@ -15,7 +15,7 @@
 
     <nav class="sidebar">
         <div class="sidebar-header">
-            <h3>MonitorPrint</h3>
+            <h3>LocalizaEdu</h3>
         </div>
         <div class="sidebar-search">
             <input type="text" placeholder="Procurar opção do menu...">
@@ -38,6 +38,11 @@
                 <i class="fas fa-bars menu-toggle"></i>
                 <span>Painel Central</span>
             </div>
+
+            <div class="hearder-center">
+                <span>Prefeitura de Paulista</span>
+            </div>
+
             <div class="header-right">
                 <span>Manual Sistema Gestão Online</span>
                 <i class="fas fa-bell"></i>
