--- a/Pagina_central/pagina.html
+++ b/Pagina_central/pagina.html
@@ -28,7 +28,7 @@
             <li><a href="#"><i class="fas fa-print"></i> Impressoras</a></li>
             <li><a href="#"><i class="fas fa-chart-pie"></i> Relatórios</a></li>
             <li><a href="#"><i class="fas fa-box"></i> Suprimentos</a></li>
-            <li><a href="#"><i class="fas fa-dollar-sign"></i> Custos</a></li>
+            <li><a href="#"><i class="fas fa-dollar-sign"></i>Mapa</a></li>
         </ul>
     </nav>
 
@@ -39,8 +39,8 @@
                 <span>Painel Central</span>
             </div>
 
-            <div class="hearder-center">
-                <span>Prefeitura de Paulista</span>
+            <div class="logoCentral">
+                <img src="../Imagens/imagemPrefeituraNv.jpg" alt="Logo Prefeitura de Paulista">
             </div>
 
             <div class="header-right">
