atualizando codigo front

--- a/Pagina_central/pagina.html
+++ b/Pagina_central/pagina.html
@@ -28,7 +28,7 @@
             <li><a href="#"><i class="fas fa-print"></i> Impressoras</a></li>
             <li><a href="#"><i class="fas fa-chart-pie"></i> Relatórios</a></li>
             <li><a href="#"><i class="fas fa-box"></i> Suprimentos</a></li>
-            <li><a href="#"><i class="fas fa-dollar-sign"></i>Mapa</a></li>
+            <li><a href="#"><i class="fas fa-map"></i> Mapa</a></li>
         </ul>
     </nav>
 
@@ -39,9 +39,7 @@
                 <span>Painel Central</span>
             </div>
 
-            <div class="logoCentral">
-                <img src="../Imagens/imagemPrefeituraNv.jpg" alt="Logo Prefeitura de Paulista">
-            </div>
+                <img src="../Imagens/logocentral2.png" alt="Logo Prefeitura de Paulista" class="logoCentral">
 
             <div class="header-right">
                 <span>Manual Sistema Gestão Online</span>
