adicionando a pagina de mapa

--- a/Pagina_central/pagina.html
+++ b/Pagina_central/pagina.html
@@ -28,7 +28,7 @@
             <li><a href="#"><i class="fas fa-print"></i> Impressoras</a></li>
             <li><a href="#"><i class="fas fa-chart-pie"></i> Relatórios</a></li>
             <li><a href="#"><i class="fas fa-box"></i> Suprimentos</a></li>
-            <li><a href="#"><i class="fas fa-map"></i> Mapa</a></li>
+            <li><a href="../Mapa/mapa.html"><i class="fas fa-map"></i> Mapa</a></li>
         </ul>
     </nav>
 
