--- a/Mapa/mapa.html
+++ b/Mapa/mapa.html
@@ -5,9 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa - LocalizaEdu</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <h1>Bem-vindo à Página de Mapa</h1>
-    <p>Esta é a página onde o mapa será exibido.</p>
+
+    <header class="top-bar">
+        <div class="logo-container">
+            <img src="../Imagens/logocentral2.png" alt="Logo Prefeitura de Paulista" class="logo">
+        </div>
+    </header>
+
+    <nav class="main-nav">
+        <ul>
+            <li><a href="../Pagina_central/pagina.html"><i class="fas fa-home"></i> Painel</a></li>
+            <li><a href="#"><i class="fas fa-calendar-alt"></i> Manutenções</a></li>
+            <li><a href="#"><i class="fas fa-users"></i> Usuários</a></li>
+            <li><a href="#"><i class="fas fa-print"></i> Impressoras</a></li>
+            <li><a href="#"><i class="fas fa-chart-pie"></i> Relatórios</a></li>
+            <li><a href="#"><i class="fas fa-box"></i> Suprimentos</a></li>
+            <li><a href="mapa.html" class="active"><i class="fas fa-map"></i> Mapa</a></li>
+        </ul>
+    </nav>
+
+    <main class="content-wrapper">
+        <div class="map-container">
+            <iframe 
+                src="https://maps.app.goo.gl/Z9Y2VX2KdjS4FYRU8"
+                width="100%" 
+                height="100%" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </main>
+
+    <section class="bottom-widgets">
+        <div class="widget widget-green">
+            <h3><i class="fas fa-print"></i> Impressoras Online</h3>
+            <p>8 <span class="subtext">de 10</span></p>
+        </div>
+        <div class="widget widget-blue">
+            <h3><i class="fas fa-calendar-alt"></i> Manutenções</h3>
+            <p>2 <span class="subtext">agendadas</span></p>
+        </div>
+    </section>
+
 </body>
 </html>
